# CollegeBasketballDFS

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AI_REVIEW_AGENT.md  Cron.md  Dockerfile  LINEUP_GENERATOR_FRAMEWORK.md  LineupStarter_MaptoDK.csv  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
Draftkings/: admin_app.py
apps/api/: README.md  main.py  requirements.deploy.txt
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
dashboard/: admin_app.py
dashboard/pages/: Global_Agentic_Review.py  Player_Review.py  Vegas_Review.py
data/: dk_manual_overrides.csv
docs/: cloud_run_api_deploy.md  vercel_migration_plan.md
scripts/: deploy_api_cloud_run.ps1
src/college_basketball_dfs/: __init__.py  cbb_ai_review.py  cbb_api_service.py  cbb_backfill.py  cbb_dk_optimizer.py  cbb_dk_registry.py  cbb_gcs.py  cbb_lineup_jobs.py  cbb_ncaa.py  cbb_odds.py  cbb_odds_backfill.py  cbb_odds_pipeline.py  cbb_pipeline.py  cbb_props_pipeline.py  cbb_rotowire.py  cbb_tail_model.py  cbb_team_lookup.py  cbb_tournament_review.py  (+2 more)
tests/: test_cbb_ai_review.py  test_cbb_api_service.py  test_cbb_backfill.py  test_cbb_dk_optimizer.py  test_cbb_dk_registry.py  test_cbb_gcs.py  test_cbb_lineup_jobs.py  test_cbb_ncaa.py  test_cbb_odds.py  test_cbb_odds_backfill.py  test_cbb_odds_pipeline.py  test_cbb_pipeline.py  test_cbb_props_pipeline.py  test_cbb_rotowire.py  test_cbb_tail_model.py  test_cbb_team_lookup.py  test_cbb_tournament_review.py  test_cbb_transform.py  test_cbb_vegas_review.py
(+41 files in other folders)
