[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "college-basketball-dfs"
version = "0.1.0"
description = "College Basketball DFS data pipeline with NCAA API fetch, GCS caching, and Streamlit admin app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests==2.32.3",
  "python-dotenv==1.0.1",
  "streamlit==1.43.1",
  "pandas==2.2.3",
  "google-cloud-storage==2.19.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
